add missing `--add-opens java.base/jdk.internal.loader` for plugin integration test
git-svn-id: https://josm.openstreetmap.de/svn/trunk@14233 0c6e7542-c601-0410-84e7-c038aed88b3b